deployment/k8/itsag3t1crm-backend-feature4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-backend-feature4
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: itsag3t1-crm-backend-feature4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itsag3t1-crm-backend-feature4
        app: backend-feature4
    spec:
      nodeSelector:
        type: karpenter
      terminationGracePeriodSeconds: 0
      containers:
      - image: 
        name: itsag3t1-crm-backend-feature4
        resources:
          requests:
            cpu: 800m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        ports:
        - containerPort: 3000
          name: http
      topologySpreadConstraints:
#        - labelSelector:
#            matchLabels:
#              app: backend
#          maxSkew: 1
#          topologyKey: kubernetes.io/hostname
#          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app: backend-feature4
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
---
apiVersion: v1
kind: Service
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-backend-feature4
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: itsag3t1-crm-backend-feature4
