deployment/k8/itsag3t1crm-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: itsag3t1-crm-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itsag3t1-crm-backend
        app: backend
    spec:
      nodeSelector:
        type: karpenter
      terminationGracePeriodSeconds: 0
      containers:
      - image: public.ecr.aws/t2p9h2o6/itsag3t1/backend:a118931dbd57d3b9738860fa78f788536af949d3
        name: itsag3t1-crm-backend
        resources:
          requests:
            cpu: 5m
            memory: 512Mi
          limits:
            cpu: 10m
            memory: 1024Mi
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        ports:
        - containerPort: 8080
          name: http
      topologySpreadConstraints:
#        - labelSelector:
#            matchLabels:
#              app: backend
#          maxSkew: 1
#          topologyKey: kubernetes.io/hostname
#          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app: backend
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
---
apiVersion: v1
kind: Service
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: itsag3t1-crm-backend
