deployment/k8/itsag3t1crm-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: itsag3t1-crm-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: itsag3t1-crm-frontend
        app: frontend
    spec:
      nodeSelector:
        type: karpenter
      terminationGracePeriodSeconds: 0
      containers:
      - image: public.ecr.aws/t2p9h2o6/itsag3t1/frontend:c1ef7a66689e68cec727eccb4b93fb7ed24ec229
        name: itsag3t1-crm-frontend
        resources:
          limits:
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        ports:
        - containerPort: 3000
          name: http
      topologySpreadConstraints:
#        - labelSelector:
#            matchLabels:
#              app: frontend
#          maxSkew: 1
#          topologyKey: kubernetes.io/hostname
#          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app: frontend
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
---
apiVersion: v1
kind: Service
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: itsag3t1-crm-frontend
