deployment/k8/game-2048.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: game-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: game-2048
  template:
    metadata:
      labels:
        app.kubernetes.io/name: game-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048
        name: game-2048
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: game-2048
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: game-2048
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: game-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: game.itsag3t1.com
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:351854075744:certificate/d50cd17f-ab25-498c-b537-a8ad0a2f0b89
spec:
  ingressClassName: alb
  rules:
     - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: game-2048
              port:
                name: http
