deployment/k8/itsag3t1crm-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsag3t1-crm-frontend-ingress
  namespace: itsag3t1-crm
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
    - host: www.itsag3t1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itsag3t1-crm-frontend
                port:
                  name: http
