deployment/k8/itsag3t1crm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: itsag3t1-crm
  name: itsag3t1-crm-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: www.itsag3t1.com
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:351854075744:certificate/98d0b30c-cafe-4b2e-87e9-64c304b65801
    alb.ingress.kubernetes.io/target-node-labels: type=karpenter
spec:
  ingressClassName: alb
  rules:
    - host: www.itsag3t1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itsag3t1-crm-frontend
                port:
                  name: http
